...
                                <userDefinedRuntimeAttributes>
                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
                                        <integer key="value" value="10"/>
                                    </userDefinedRuntimeAttribute>
                                </userDefinedRuntimeAttributes>
                            </view>
                            <searchBar contentMode="redraw" searchBarStyle="minimal" placeholder="Search for your new home" translatesAutoresizingMaskIntoConstraints="NO" id="rWl-W9-8WM">
                                <rect key="frame" x="27" y="426" width="360" height="56"/>
                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="360" id="rfe-oE-2Ib"/>
                                </constraints>
                                <textInputTraits key="textInputTraits" returnKeyType="search"/>
...
